subprojects {
  apply plugin: 'java'
  group = 'org.d20srd'
  version '0.1.0'
  repositories {
    mavenCentral()
  }
  dependencies {
    compile     group: 'org.apache.logging.log4j',  name: 'log4j-api',            version: '2.11.1'
    compile     group: 'org.apache.logging.log4j',  name: 'log4j-core',           version: '2.11.1'
    testCompile group: 'org.junit.jupiter',         name: 'junit-jupiter-api',    version: '5.2.0'
    testRuntime group: 'org.junit.jupiter',         name: 'junit-jupiter-engine', version: '5.2.0'
  }
  sourceCompatibility = 1.8
  targetCompatibility = 1.8
  compileJava {
    options.compilerArgs << "-Xlint:deprecation"
  }
  test {
    useJUnitPlatform()
    testLogging {
      // show standard out and standard error of the test JVM(s) on the console
      showStandardStreams = true
      events "passed", "skipped", "failed"
    }
    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"
    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=256m'
    reports {
      html.enabled = true
    }
  }
}

project(':d20srd-core') {
  jar {
    manifest {
      attributes 'Implementation-Title': 'd20 SRD Core',
      'Implementation-Version': version
    }
  }
}

project(':d20srd-dicebag') {
  apply plugin: 'application'
  mainClassName = "org.d20srd.dicebag.Dicebag"
  dependencies {
    compile project(':d20srd-core')
  }
  jar {
    manifest {
      attributes 'Implementation-Title': 'd20 SRD Core',
        'Implementation-Version': version,
        'Main-Class': mainClassName
    }
  }
}
